Changes in version 0.0.9 - UNRELEASED:
 * Fix the build being broken on Debian Jessie due to #22648.

Changes in version 0.0.8 - 2017-06-19:
 * Bug 20776: Remove the X11 `MIT-SHM` workaround from the stub.
 * Bug 22470: Resync the bridges.
 * Bug 22607: Make it clear that basically 0 active development is happening.
 * Bug 22648: Prevent the "easy" to fix X11 related sandbox escapes.
 * Bug 22650: Make it clear that Pulse Audio is potentially dangerous
   to enable.

Changes in version 0.0.7 - 2017-05-22:
 * Bug 21977: Fetch install/update metadata files from a different location.
 * Bug 22038: Stub out `pa_start_child_for_read`.

Changes in version 0.0.6 - 2017-04-19:
 * Add back the old release MAR signing key.

Changes in version 0.0.5 - 2017-04-13:
 * Bug 21764: Use bubblewrap's `--die-with-parent` when supported.
 * Fix e10s Web Content crash on systems with grsec kernels.
 * Add `prlimit64` to the firefox system call whitelist.

Changes in version 0.0.4 - 2017-04-12:
 * Bug 21928: Force a reinstall if an existing hardened bundle is present.
 * Bug 21929: Remove hardened/ASAN related code.
 * Bug 21927: Remove the ability to install/update the hardened bundle.
 * Bug 21244: Update the MAR signing key for 7.0.
 * Bug 21536: Remove asn's scramblesuit bridge from Tor Browser.
 * Fix compilation with Go 1.8.
 * Use Config.Clone() to clone TLS configs when available.

Changes in version 0.0.3 - 2017-01-18:
 * Bug 21057: Change the metadata URL(s) for the stable bundle.
 * Bug 21184: Do a better job of killing/cleaning up bwrap children.
 * Bug 21093: Go back to using gosecco for seccomp rule compilation.
 * Bug 20940: Deprecate x86 support.
 * Bug 20778: Check for updates in the background.
 * Bug 20851: If the incremental update fails, fall back to the complete
   update.
 * Bug 21055: Fall back gracefully if the Adwaita theme is not present.
 * Bug 20791: Fetch install/update metadata using onions.