@@ -1,5 +1,6 @@
 Changes in version 0.0.9 - UNRELEASED:
  * Fix the build being broken on Debian Jessie due to #22648.
+ * Remove the undocumented command line options that enable unsafe behavior.
 
 Changes in version 0.0.8 - 2017-06-19:
  * Bug 20776: Remove the X11 `MIT-SHM` workaround from the stub.
